# QuickStart

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  NotOK.md  PROJECT_STRUCTURE.md  README.md  config.json  resources.qrc
.github/workflows/: README.md  ci.yml
include/: appconfigdialog.h  appitem.h  config.h  funcconfigdialog.h  funcitem.h  icongenerator.h  mainwindow.h
src/: appconfigdialog.cpp  appitem.cpp  funcconfigdialog.cpp  funcitem.cpp  icongenerator.cpp  main.cpp  mainwindow.cpp
tools/: README.md
tools/test-tools/: test_icon_generator.cpp
ui/: appconfigdialog.ui  funcconfigdialog.ui  mainwindow.ui
